k8s_deploy/deploy_go.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-web-app
spec:
  selector:
    matchLabels:
      app: go-web-app
  template:
    metadata:
      labels:
        app: go-web-app
    spec:
      volumes:
        - name: myvolume
          persistentVolumeClaim:
            claimName: pvc-go 

      containers:
      - name: application
        image: sammy/go-web-app
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: "100m"
            memory: "100Mi"
          limits:
            cpu: "100m"
            memory: "100Mi"  
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 60
          periodSeconds: 60
        readinessProbe:
          httpGet:
            path: /
            port: 8000


        volumeMounts:
        - mountPath: /pv
          name: myvolume
