k8s_deploy/deploy_go_pvc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-web-app
spec:
  selector:
    matchLabels:
      app: go-web-app
  template:
    metadata:
      labels:
        app: go-web-app
    spec:
      volumes:
        - name: myvolume
          persistentVolumeClaim:
            claimName: pvc-go

      containers:
        - name: application
          image: golang:1.17
          command: ["/bin/sh", "-c"]
          args:
            - echo "deb http://ftp.uk.debian.org/debian jessie-backports main >>/etc/apt/sources.list";
              apt-get -y update;
              apt-get -y install ffmpeg;
              mkdir /pv;
              cd /pv && git pull https://github.com/letran3691/echo_gorm.git;
              ls -al;
              cd /pv/echo_gorm && go build -o main .;
              cd /pv/echo_gorm && cp youtube-dl /usr/local/bin;
              chmod a+rx /usr/local/bin/youtube-dl;
              /pv/echo_gorm/main;


          resources: {}
            # requests:
            #   cpu: "100m"
            #   memory: "100Mi"
            # limits:
            #   cpu: "100m"
          #   memory: "100Mi"
          ports:
            - containerPort: 8000

          volumeMounts:
            - mountPath: /pv
              name: myvolume

---

apiVersion: v1
kind: Service
metadata:
  name: go-web-service
spec:
  type: NodePort
  selector:
    app: go-web-app
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
