k8s_deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: go-web-service
spec:
  # type: NodePort
  selector:
    app: go-web-app
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
