k8s_deploy/ingress.yml
apiVersion: networking.k8s.io/v1

kind: Ingress
metadata:
  name: ingress-web-go
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-staging"

spec:
  tls:
  - hosts:
    - trunglv.xxx.com.vn
    secretName: trunglv.xxx.com.vn-cert
  rules:
  - host: trunglv.xxx.com.vn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: go-web-service
            port:
              number: 80
